--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <title>M. Abdullah | Data Analyst Portfolio</title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
-  <!-- Font Awesome -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-  
+
   <!-- Style -->
   <link rel="stylesheet" href="style.css" />
 
@@ -22,7 +21,7 @@
   <div id="particles-js"></div>
 
   <!-- Header -->
-  <header>
+  <header class="hover-header">
     <div class="header-content">
       <img src="Mie_Pic.jpg" alt="M. Abdullah" class="profile-pic">
       <div class="header-text">
@@ -34,18 +33,18 @@
 
   <!-- About Me -->
   <section>
-    <h2 class="about"><i class="fas fa-user"></i> About Me</h2>
+    <h2>📌 About Me</h2>
     <p>I’m a data analyst passionate about turning data into actionable insights. This site showcases my projects, skills, and experience using R, Tableau, and more.</p>
   </section>
 
   <!-- Case Studies -->
   <section>
-    <h2 class="casestudy"><i class="fas fa-chart-line"></i> Case Studies</h2>
+    <h2>📊 Case Studies</h2>
     <div class="case-studies-vertical">
 
       <!-- Cyclistic Case Study -->
       <div class="case-study">
-        <h3><i class="fas fa-bicycle"></i> 01. Cyclistic Bike-Share User Behavior Analysis</h3>
+        <h3>01. Cyclistic Bike-Share User Behavior Analysis</h3>
         <p>A case study analyzing ride behavior differences between annual members and casual riders using R and Tableau.</p>
         <ul>
           <li><strong>Data Source:</strong> Cyclistic Dataset 
@@ -53,44 +52,45 @@
             <a href="https://docs.google.com/spreadsheets/d/179QVLO_yu5BJEKFVZShsKag74ZaUYIF6FevLYzs3hRc/template/preview#gid=640449855" target="_blank">2020</a>
           </li>
           <li><strong>Tools:</strong> R, dplyr, lubridate, Tableau, PowerPoint</li>
-          <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/CyclisticDataset_17539250254980/Dashboard1" target="_blank"><i class="fas fa-chart-line"></i> Tableau Dashboard</a></li>
-          <li><a href="01_Cyclistic_Rides/02_Presentation/01_Casestudy-1_Report.pdf" target="_blank"><i class="fas fa-file-pdf"></i> Final Presentation PDF</a></li>
-          <li><a href="01_Cyclistic_Rides/01_R-Work/cyclistic_analysis.R" target="_blank"><i class="fas fa-file-code"></i> R Script</a></li>
-          <li><a href="01_Cyclistic_Rides/summary(Final).csv" target="_blank"><i class="fas fa-database"></i> Summary Dataset</a></li>
-          <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/01_Cyclistic_Rides" target="_blank"><i class="fab fa-github"></i> Visit project folder</a></li>
+          <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/CyclisticDataset_17539250254980/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
+          <li><a href="01_Cyclistic_Rides/02_Presentation/01_Casestudy-1_Report.pdf" target="_blank">📄 Final Presentation PDF</a></li>
+          <li><a href="01_Cyclistic_Rides/01_R-Work/cyclistic_analysis.R" target="_blank">📄 R Script</a></li>
+          <li><a href="01_Cyclistic_Rides/summary(Final).csv" target="_blank">📊 Summary Dataset</a></li>
+          <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/01_Cyclistic_Rides" target="_blank">Visit project folder</a></li>
         </ul>
       </div>
 
       <!-- Superstore Case Study -->
       <div class="case-study">
-        <h3><i class="fas fa-store"></i> 02. Superstore Sales & Profitability Analysis</h3>
+        <h3>02. Superstore Sales & Profitability Analysis</h3>
         <p>A case study analyzing Superstore dataset across segments, categories, regions, and shipping modes.</p>
         <ul>
-          <li><strong>Data Source:</strong> Superstore <a href="https://www.kaggle.com/datasets/vivek468/superstore-dataset-final?" target="_blank"><i class="fas fa-database"></i> Dataset</a></li>
+          <li><strong>Data Source:</strong> Superstore <a href="https://www.kaggle.com/datasets/vivek468/superstore-dataset-final?" target="_blank">Dataset</a></li>
           <li><strong>Tools:</strong> R, ggplot2, Tableau</li>
-          <li><a href="02_SuperStore/02_Presentation/SuperStore Presentation.pdf" target="_blank"><i class="fas fa-file-pdf"></i> Final Presentation PDF</a></li>
-          <li><a href="02_SuperStore/01_R Work/SuperStore Dataset ( Cleaning + Analysis + Visualization).R" target="_blank"><i class="fas fa-file-code"></i> R Script</a></li>
-          <li><a href="02_SuperStore/Cleaned_Superstore.csv" target="_blank"><i class="fas fa-database"></i> Cleaned Dataset</a></li>
-          <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/SuperStoreDatasetVisualization/Dashboard1" target="_blank"><i class="fas fa-chart-line"></i> Tableau Dashboard</a></li>
-          <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/02_SuperStore" target="_blank"><i class="fab fa-github"></i> Visit project folder</a></li>
+          <li><a href="02_SuperStore/02_Presentation/SuperStore Presentation.pdf" target="_blank">📄 Final Presentation PDF</a></li>
+          <li><a href="02_SuperStore/01_R Work/SuperStore Dataset ( Cleaning + Analysis + Visualization).R" target="_blank">📄 R Script</a></li>
+          <li><a href="02_SuperStore/Cleaned_Superstore.csv" target="_blank">📊 Cleaned Dataset</a></li>
+          <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/SuperStoreDatasetVisualization/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
+          <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/02_SuperStore" target="_blank">Visit project folder</a></li>
         </ul>
       </div>
 
     </div>
   </section>
 
-  <!-- Connect Section -->
-  <section>
-    <div class="connect-box">
-      <h2>Connect</h2>
-      <div class="social-icons">
-        <a href="mailto:mabdullapro437@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
-        <a href="https://www.linkedin.com/in/mabdullahckl" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://www.instagram.com/mabdullah_ckl" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.facebook.com/share/1Ea6cTcDEr/" target="_blank"><i class="fab fa-facebook"></i></a>
-      </div>
+<!-- Connect Section -->
+<section>
+  <div class="connect-box">
+    <h2>🔗 Connect</h2>
+    <div class="social-icons">
+      <a href="mailto:mabdullapro437@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/mabdullahckl" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/mabdullah_ckl" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/share/1Ea6cTcDEr/" target="_blank"><i class="fab fa-facebook"></i></a>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Initialize Particles -->
   <script>
@@ -112,6 +112,5 @@
       "retina_detect": true
     });
   </script>
-
 </body>
 </html>
