--- a/index.html
+++ b/index.html
@@ -1,104 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>M. Abdullah | Data Analyst Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>M. Abdullah | Data Analyst Portfolio</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 
-    <link rel="stylesheet" href="style.css" />
+  <!-- Style -->
+  <link rel="stylesheet" href="style.css" />
 
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <!-- Particles.js -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 </head>
 <body>
 
-    <div id="particles-js"></div>
+  <!-- Particle Background -->
+  <div id="particles-js"></div>
 
-    <header class="hover-header">
-    <div class="header-content">
-      <img src="Mie_Pic.jpg" alt="M. Abdullah" class="profile-pic">
-      <div class="header-text">
-        <h1>M. Abdullah</h1>
-        <p>Data Analyst | R • SQL • Tableau</p>
-      </div>
-    </div>
-  </header>
+  <!-- Header -->
+  <header class="hover-header">
+    <div class="header-content">
+      <img src="Mie_Pic.jpg" alt="M. Abdullah" class="profile-pic">
+      <div class="header-text">
+        <h1>M. Abdullah</h1>
+        <p>Data Analyst | R • SQL • Tableau</p>
+      </div>
+    </div>
+  </header>
 
-    <section>
-    <h2><i class="fas fa-user-circle"></i> About Me</h2>
-    <p>I’m a data analyst passionate about turning data into actionable insights. This site showcases my projects, skills, and experience using R, Tableau, and more.</p>
-  </section>
+  <!-- About Me -->
+  <section>
+    <h2>📌 About Me</h2>
+    <p>I’m a data analyst passionate about turning data into actionable insights. This site showcases my projects, skills, and experience using R, Tableau, and more.</p>
+  </section>
 
-    <section>
-    <h2><i class="fas fa-chart-bar"></i> Case Studies</h2>
-    <div class="case-studies-vertical">
+  <!-- Case Studies -->
+  <section>
+    <h2>📊 Case Studies</h2>
+    <div class="case-studies-vertical">
 
-            <div class="case-study">
-        <h3>01. Cyclistic Bike-Share User Behavior Analysis</h3>
-        <p>A case study analyzing ride behavior differences between annual members and casual riders using R and Tableau.</p>
-        <ul>
-          <li><strong>Data Source:</strong> Cyclistic Dataset
-            <a href="https://docs.google.com/spreadsheets/d/1uCTsHlZLm4L7-ueaSLwDg0ut3BP_V4mKDo2IMpaXrk4/template/preview?resourcekey=0-dQAUjAu2UUCsLEQQt20PDA#gid=1797029090" target="_blank">2019</a> and
-            <a href="https://docs.google.com/spreadsheets/d/179QVLO_yu5BJEKFVZShsKag74ZaUYIF6FevLYzs3hRc/template/preview#gid=640449855" target="_blank">2020</a>
-          </li>
-          <li><strong>Tools:</strong> R, dplyr, lubridate, Tableau, PowerPoint</li>
-          <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/CyclisticDataset_17539250254980/Dashboard1" target="_blank"><i class="fas fa-external-link-alt"></i> Tableau Dashboard</a></li>
-          <li><a href="01_Cyclistic_Rides/02_Presentation/01_Casestudy-1_Report.pdf" target="_blank"><i class="fas fa-file-pdf"></i> Final Presentation PDF</a></li>
-          <li><a href="01_Cyclistic_Rides/01_R-Work/cyclistic_analysis.R" target="_blank"><i class="fas fa-file-code"></i> R Script</a></li>
-          <li><a href="01_Cyclistic_Rides/summary(Final).csv" target="_blank"><i class="fas fa-file-csv"></i> Summary Dataset</a></li>
-          <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/01_Cyclistic_Rides" target="_blank"><i class="fab fa-github"></i> Visit project folder</a></li>
-        </ul>
-      </div>
+      <!-- Cyclistic Case Study -->
+      <div class="case-study">
+        <h3>01. Cyclistic Bike-Share User Behavior Analysis</h3>
+        <p>A case study analyzing ride behavior differences between annual members and casual riders using R and Tableau.</p>
+        <ul>
+          <li><strong>Data Source:</strong> Cyclistic Dataset 
+            <a href="https://docs.google.com/spreadsheets/d/1uCTsHlZLm4L7-ueaSLwDg0ut3BP_V4mKDo2IMpaXrk4/template/preview?resourcekey=0-dQAUjAu2UUCsLEQQt20PDA#gid=1797029090" target="_blank">2019</a> and 
+            <a href="https://docs.google.com/spreadsheets/d/179QVLO_yu5BJEKFVZShsKag74ZaUYIF6FevLYzs3hRc/template/preview#gid=640449855" target="_blank">2020</a>
+          </li>
+          <li><strong>Tools:</strong> R, dplyr, lubridate, Tableau, PowerPoint</li>
+          <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/CyclisticDataset_17539250254980/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
+          <li><a href="01_Cyclistic_Rides/02_Presentation/01_Casestudy-1_Report.pdf" target="_blank">📄 Final Presentation PDF</a></li>
+          <li><a href="01_Cyclistic_Rides/01_R-Work/cyclistic_analysis.R" target="_blank">📄 R Script</a></li>
+          <li><a href="01_Cyclistic_Rides/summary(Final).csv" target="_blank">📊 Summary Dataset</a></li>
+          <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/01_Cyclistic_Rides" target="_blank">Visit project folder</a></li>
+        </ul>
+      </div>
 
-            <div class="case-study">
-        <h3>02. Superstore Sales & Profitability Analysis</h3>
-        <p>A case study analyzing Superstore dataset across segments, categories, regions, and shipping modes.</p>
-        <ul>
-          <li><strong>Data Source:</strong> Superstore <a href="https://www.kaggle.com/datasets/vivek468/superstore-dataset-final?" target="_blank">Dataset</a></li>
-          <li><strong>Tools:</strong> R, ggplot2, Tableau</li>
-          <li><a href="02_SuperStore/02_Presentation/SuperStore Presentation.pdf" target="_blank"><i class="fas fa-file-pdf"></i> Final Presentation PDF</a></li>
-          <li><a href="02_SuperStore/01_R Work/SuperStore Dataset ( Cleaning + Analysis + Visualization).R" target="_blank"><i class="fas fa-file-code"></i> R Script</a></li>
-          <li><a href="02_SuperStore/Cleaned_Superstore.csv" target="_blank"><i class="fas fa-file-csv"></i> Cleaned Dataset</a></li>
-          <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/SuperStoreDatasetVisualization/Dashboard1" target="_blank"><i class="fas fa-external-link-alt"></i> Tableau Dashboard</a></li>
-          <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/02_SuperStore" target="_blank"><i class="fab fa-github"></i> Visit project folder</a></li>
-        </ul>
-      </div>
-    </div>
-  </section>
+      <!-- Superstore Case Study -->
+      <div class="case-study">
+        <h3>02. Superstore Sales & Profitability Analysis</h3>
+        <p>A case study analyzing Superstore dataset across segments, categories, regions, and shipping modes.</p>
+        <ul>
+          <li><strong>Data Source:</strong> Superstore <a href="https://www.kaggle.com/datasets/vivek468/superstore-dataset-final?" target="_blank">Dataset</a></li>
+          <li><strong>Tools:</strong> R, ggplot2, Tableau</li>
+          <li><a href="02_SuperStore/02_Presentation/SuperStore Presentation.pdf" target="_blank">📄 Final Presentation PDF</a></li>
+          <li><a href="02_SuperStore/01_R Work/SuperStore Dataset ( Cleaning + Analysis + Visualization).R" target="_blank">📄 R Script</a></li>
+          <li><a href="02_SuperStore/Cleaned_Superstore.csv" target="_blank">📊 Cleaned Dataset</a></li>
+          <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/SuperStoreDatasetVisualization/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
+          <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/02_SuperStore" target="_blank">Visit project folder</a></li>
+        </ul>
+      </div>
 
+    </div>
+  </section>
+
+<!-- Connect Section -->
 <section>
-  <div class="connect-box">
-    <h2><i class="fas fa-link"></i> Connect</h2>
-    <div class="social-icons">
-      <a href="mailto:mabdullapro437@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
-      <a href="https://www.linkedin.com/in/mabdullahckl" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://www.instagram.com/mabdullah_ckl" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.facebook.com/share/1Ea6cTcDEr/" target="_blank"><i class="fab fa-facebook"></i></a>
-    </div>
-  </div>
+  <div class="connect-box">
+    <h2>🔗 Connect</h2>
+    <div class="social-icons">
+      <a href="mailto:mabdullapro437@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/mabdullahckl" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/mabdullah_ckl" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/share/1Ea6cTcDEr/" target="_blank"><i class="fab fa-facebook"></i></a>
+    </div>
+  </div>
 </section>
 
 
-    <script>
-    particlesJS("particles-js", {
-      "particles": {
-        "number": {"value": 120, "density": {"enable": true, "value_area": 800}},
-        "color": {"value": "#4fc3f7"},
-        "shape": {"type": "circle", "stroke": {"width": 0, "color": "#000000"}},
-        "opacity": {"value": 0.6, "random": true, "anim": {"enable": true, "speed": 0.5, "opacity_min": 0.2, "sync": false}},
-        "size": {"value": 4, "random": true, "anim": {"enable": true, "speed": 2, "size_min": 1, "sync": false}},
-        "line_linked": {"enable": true, "distance": 120, "color": "#4fc3f7", "opacity": 0.4, "width": 1},
-        "move": {"enable": true, "speed": 2, "direction": "none", "random": true, "straight": false, "out_mode": "out", "bounce": false}
-      },
-      "interactivity": {
-        "detect_on": "canvas",
-        "events": {"onhover": {"enable": true, "mode": "grab"}, "onclick": {"enable": true, "mode": "push"}, "resize": true},
-        "modes": {"grab": {"distance": 140, "line_linked": {"opacity": 0.5}}, "bubble": {"distance": 200, "size": 8, "duration": 2, "opacity": 0.8, "speed": 3}, "repulse": {"distance": 100, "duration": 0.4}, "push": {"particles_nb": 6}, "remove": {"particles_nb": 2}}
-      },
-      "retina_detect": true
-    });
-  </script>
+  <!-- Initialize Particles -->
+  <script>
+    particlesJS("particles-js", {
+      "particles": {
+        "number": {"value": 120, "density": {"enable": true, "value_area": 800}},
+        "color": {"value": "#4fc3f7"},
+        "shape": {"type": "circle", "stroke": {"width": 0, "color": "#000000"}},
+        "opacity": {"value": 0.6, "random": true, "anim": {"enable": true, "speed": 0.5, "opacity_min": 0.2, "sync": false}},
+        "size": {"value": 4, "random": true, "anim": {"enable": true, "speed": 2, "size_min": 1, "sync": false}},
+        "line_linked": {"enable": true, "distance": 120, "color": "#4fc3f7", "opacity": 0.4, "width": 1},
+        "move": {"enable": true, "speed": 2, "direction": "none", "random": true, "straight": false, "out_mode": "out", "bounce": false}
+      },
+      "interactivity": {
+        "detect_on": "canvas",
+        "events": {"onhover": {"enable": true, "mode": "grab"}, "onclick": {"enable": true, "mode": "push"}, "resize": true},
+        "modes": {"grab": {"distance": 140, "line_linked": {"opacity": 0.5}}, "bubble": {"distance": 200, "size": 8, "duration": 2, "opacity": 0.8, "speed": 3}, "repulse": {"distance": 100, "duration": 0.4}, "push": {"particles_nb": 6}, "remove": {"particles_nb": 2}}
+      },
+      "retina_detect": true
+    });
+  </script>
 </body>
 </html>
