--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
   <!-- Particles.js -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 </head>
-<body>
+<body class="dark-mode">
 
   <!-- Particle Background -->
   <div id="particles-js"></div>
+
+  <!-- Dark/Light Toggle -->
+  <button id="theme-toggle"><i class="fas fa-moon"></i></button>
 
   <!-- Header -->
   <header>
@@ -94,28 +97,7 @@
   </div>
 </section>
 
-
-
-  <!-- Initialize Particles -->
-  <script>
-    particlesJS("particles-js", {
-      "particles": {
-        "number": {"value": 120, "density": {"enable": true, "value_area": 800}},
-        "color": {"value": "#4fc3f7"},
-        "shape": {"type": "circle", "stroke": {"width": 0, "color": "#000000"}},
-        "opacity": {"value": 0.6, "random": true, "anim": {"enable": true, "speed": 0.5, "opacity_min": 0.2, "sync": false}},
-        "size": {"value": 4, "random": true, "anim": {"enable": true, "speed": 2, "size_min": 1, "sync": false}},
-        "line_linked": {"enable": true, "distance": 120, "color": "#4fc3f7", "opacity": 0.4, "width": 1},
-        "move": {"enable": true, "speed": 2, "direction": "none", "random": true, "straight": false, "out_mode": "out", "bounce": false}
-      },
-      "interactivity": {
-        "detect_on": "canvas",
-        "events": {"onhover": {"enable": true, "mode": "grab"}, "onclick": {"enable": true, "mode": "push"}, "resize": true},
-        "modes": {"grab": {"distance": 140, "line_linked": {"opacity": 0.5}}, "bubble": {"distance": 200, "size": 8, "duration": 2, "opacity": 0.8, "speed": 3}, "repulse": {"distance": 100, "duration": 0.4}, "push": {"particles_nb": 6}, "remove": {"particles_nb": 2}}
-      },
-      "retina_detect": true
-    });
-  </script>
-
+  <!-- Scripts -->
+  <script src="script.js"></script>
 </body>
 </html>
