--- a/index.html
+++ b/index.html
@@ -70,12 +70,27 @@
         <p>A case study analyzing Superstore dataset across segments, categories, regions, and shipping modes.</p>
         <ul>
           <li><strong>Data Source:</strong> Superstore <a href="https://www.kaggle.com/datasets/vivek468/superstore-dataset-final?" target="_blank"><i class="fas fa-database"></i> Dataset</a></li>
-          <li><strong>Tools:</strong> R, ggplot2, Tableau</li>
+          <li><strong>Tools:</strong> R, ggplot2, Tableau , Powerpoint</li>
           <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/SuperStoreDatasetVisualization/Dashboard1" target="_blank"><i class="fas fa-chart-line"></i> Tableau Dashboard</a></li>
           <li><a href="02_SuperStore/02_Presentation/SuperStore Presentation.pdf" target="_blank"><i class="fas fa-file-pdf"></i> Final Presentation PDF</a></li>
           <li><a href="02_SuperStore/01_R Work/SuperStore Dataset ( Cleaning + Analysis + Visualization).R" target="_blank"><i class="fas fa-file-code"></i> R Script</a></li>
           <li><a href="02_SuperStore/Cleaned_Superstore.csv" target="_blank"><i class="fas fa-database"></i> Cleaned Dataset</a></li>
           <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/02_SuperStore" target="_blank"><i class="fab fa-github"></i> Visit project folder</a></li>
+        </ul>
+      </div>
+
+      <!-- Fitbits Consumer -->
+      <div class="case-study">
+        <h3><i class="fas fa-store"></i> Fitbit Users Behaviour Analysis</h3>
+        <p>A case study analyzing Fitbit user data to segment users by activity level, identify weekly behavior patterns, and provide data-driven marketing recommendations to Bellabeat.</p>
+        <ul>
+          <li><strong>Data Source:</strong> Fitbit Fitness Tracker <a href="https://www.kaggle.com/datasets/arashnic/fitbit?select=mturkfitbit_export_4.12.16-5.12.16" target="_blank"><i class="fas fa-database"></i> Dataset</a></li>
+          <li><strong>Tools:</strong>  R, Tableau, PowerPoint</li>
+          <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/FitbeatsDataset/Dashboard3#1" target="_blank"><i class="fas fa-chart-line"></i> Tableau Dashboard</a></li>
+          <li><a href="03_Fitbit_Consumers/03_Presentation/Final_Presentation_Fitbits_Dataset.pdf" target="_blank"><i class="fas fa-file-pdf"></i> Final Presentation PDF</a></li>
+          <li><a href="03_Fitbit_Consumers/01_R_Work/02_Fitbit(Cleaning+Analysis).R" target="_blank"><i class="fas fa-file-code"></i> R Script</a></li>
+          <li><a href="03_Fitbit_Consumers/01_daily_activity_cleaned.csv" target="_blank"><i class="fas fa-database"></i> Cleaned Dataset</a></li>
+          <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/c10597bf06befc3c9e4515f9fea4cb404824ca60/03_Fitbit_Consumers" target="_blank"><i class="fab fa-github"></i> Visit project folder</a></li>
         </ul>
       </div>
 
