Added Kaggle View

--- a/assets/project htmls/04_pubg-details.html
+++ b/assets/project htmls/04_pubg-details.html
@@ -147,6 +147,8 @@
                   <a href="../../04_Pubg/03_Presentation/PUBG_DATASET_PRESENTATION.pdf" target="_blank"><i class="fas fa-file-pdf"></i> Final Professional Presentation</a></li>
                 <li><strong>Cleaned/Filtered/Sampled Dataset </strong>:
                   <a href="../../04_Pubg/cleaned_pubg_dataset_Tableau.csv" target="_blank"><i class="fas fa-file-pdf"></i> Dataset</a></li>
+                <li><strong> View on Kaggle </strong>:
+                  <a href="https://www.kaggle.com/code/mabdullah5121/pubg-players-performance-analysis" target="_blank"><i class="fas fa-file-pdf"></i> Explore analysis on Kaggle</a></li>
                 <li><strong>Github Files </strong>:
                   <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/0719a253d23a41876b6e1da401415963671a6661/04_Pubg" target="_blank"><i class="fas fa-file-pdf"></i> Visit Project Folder</a></li>
               </ul>
