--- a/assets/project htmls/03_fitbit-details.html
+++ b/assets/project htmls/03_fitbit-details.html
@@ -146,6 +146,8 @@
                   <a href="../../03_Fitbit_Consumers/03_Presentation/Final_Presentation_Fitbits_Dataset.pdf" target="_blank"><i class="fas fa-file-pdf"></i> Final Presentation</a></li>
                 <li><strong>Cleaned Dataset </strong>:
                   <a href="../../03_Fitbit_Consumers/01_daily_activity_cleaned.csv" target="_blank"><i class="fas fa-file-pdf"></i> Dataset</a></li>
+                <li><strong> View on Kaggle </strong>:
+                  <a href="https://www.kaggle.com/code/mabdullah5121/fitbit-user-behaviour-analysis" target="_blank"><i class="fas fa-file-pdf"></i> Explore analysis on Kaggle</a></li>
                 <li><strong>Github Files </strong>:
                   <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/52605f03017504d97ab0285317ce520f8e634eb2/03_Fitbit_Consumers" target="_blank"><i class="fas fa-file-pdf"></i> Visit Project Folder</a></li>
               </ul>
